@@ -1,5 +1,5 @@
 #!/bin/sh
-# $Id: op_start,v 1.32 2001/07/25 16:43:30 movement Exp $
+# $Id: op_start,v 1.33 2001/08/02 17:55:22 movement Exp $
 # COPYRIGHT (C) 2000 THE VICTORIA UNIVERSITY OF MANCHESTER and John Levon
 # This program is free software; you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -101,7 +101,7 @@ do_sysctl()
 	dev_name=`echo $arg | tr . /`
 
 	if [ ! -f /proc/sys/$dev_name ]; then
-		echo "/proc/sys/$dev_name does not exist or is not a regular file"
+		echo "/proc/sys/$dev_name does not exist or is not a regular file" >&2
 		exit 1
 	fi
 
