@@ -1,3 +1,13 @@
+2001-08-02  John Levon  <moz@compsoc.man.ac.uk>
+
+	* oprofile.c: fix mod unload race, small fixes
+ 
+	* dae/op_start: make sysctl error actually appear
+ 
+	* doc/oprofile.sgml: document need for modutils 2.4.6
+
+	* op_syscalls.c: fix stupid mod use count problem
+ 
 2001-07-28  John Levon  <moz@compsoc.man.ac.uk>
 
 	* dae/opd_proc.c: d'oh, fat-fingered a slow memleak in the
